--- a/PositionProjekt/Gemfile
+++ b/PositionProjekt/Gemfile
@@ -26,7 +26,7 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
-# Use unicorn as the app server
+# Use unicorn as the apps server
 # gem 'unicorn'
 
 # Use Capistrano for deployment
