--- a/PositionProjekt/Gemfile
+++ b/PositionProjekt/Gemfile
@@ -37,3 +37,5 @@ gem 'bcrypt', '~> 3.1.7'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin]
+
+gem 'jwt'
